# second_elementaryos_tutorial

./: meson.build
data/: hello-again.appdata.xml  hello-again.desktop.in
po/: com.github.vancha.second_elementaryos_tutorial.pot  de.po  es.po
src/: Application  Application.vala
